@@ -1,4 +1,4 @@
-@set UPDATED 10 November 2006
-@set UPDATED-MONTH November 2006
-@set EDITION 2.2.4
-@set VERSION 2.2.4
+@set UPDATED 25 December 2006
+@set UPDATED-MONTH December 2006
+@set EDITION 2.3.0
+@set VERSION 2.3.0
